<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:key="connection_settings_category"
        android:title="@string/connection_settings_category_title">
        <CheckBoxPreference
            android:key="connect_on_startup_preference"
            android:title="@string/connect_on_startup_preference_title"
            android:dialogTitle="@string/connect_on_startup_preference_title"
            android:defaultValue="@string/connect_on_startup_preference_default"/>
        <ListPreference
            android:key="interface_type_preference"
            android:title="@string/interface_type_preference_title"
            android:dialogTitle="@string/interface_type_preference_title"
            android:entries="@array/obd_interface_types"
            android:entryValues="@array/obd_interface_types"
            android:defaultValue="@string/interface_type_preference_default"/>
        <ListPreference
            android:key="bluetooth_device_preference"
            android:title="@string/bluetooth_device_preference_title"
            android:dialogTitle="@string/bluetooth_device_preference_title"
            android:defaultValue="@string/bluetooth_device_preference_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="obd_settings_category"
        android:title="@string/obd_settings_category_title">
        <ListPreference
            android:key="obd_protocol_preference"
            android:title="@string/obd_protocol_preference_title"
            android:dialogTitle="@string/obd_protocol_preference_title"
            android:defaultValue="@string/obd_protocol_preference_default"/>
        <!--suppress AndroidElementNotAllowed -->
        <EditTextPreferenceFix
            android:key="obd_update_delay_preference"
            android:title="@string/obd_update_delay_preference_title"
            android:dialogTitle="@string/obd_update_delay_preference_title"
            android:defaultValue="@string/obd_update_delay_preference_default"
            android:inputType="numberDecimal"/>
        <CheckBoxPreference
            android:key="imperial_units_preference"
            android:title="@string/imperial_units_preference_title"
            android:dialogTitle="@string/imperial_units_preference_title"
            android:defaultValue="@string/imperial_units_preference_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="obd_recording_category"
        android:title="@string/obd_recording_category_title">
        <CheckBoxPreference
            android:key="obd_recording_preference"
            android:title="@string/obd_recording_preference_title"
            android:dialogTitle="@string/obd_recording_preference_title"
            android:defaultValue="@string/obd_recording_preference_default"/>
        <PreferenceScreen
            android:key="obd_recording_commands_preference"
            android:title="@string/obd_recording_commands_preference_title"
            android:summary="@string/obd_recording_commands_preference_summary">
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="logging_category"
        android:title="@string/logging_category_title">
        <CheckBoxPreference
            android:key="enable_logging_preference"
            android:title="@string/enable_logging_preference_title"
            android:dialogTitle="@string/enable_logging_preference_title"
            android:defaultValue="@string/enable_logging_preference_default"/>
        <CheckBoxPreference
            android:key="enable_save_stacktrace_preference"
            android:title="@string/enable_save_stacktrace_preference_title"
            android:dialogTitle="@string/enable_save_stacktrace_preference_title"
            android:defaultValue="@string/enable_save_stacktrace_preference_default"/>
    </PreferenceCategory>
</PreferenceScreen>