<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_activity_drawer_header_height"
    android:background="@drawable/main_drawer_header_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="14dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/main_activity_drawer_header_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/main_activity_drawer_header_vertical_spacing"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/main_activity_drawer_header_vertical_spacing"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/textView6"
        android:layout_below="@+id/main_activity_drawer_header_image_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/status_dot"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_dot_red"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/navigation_drawer_connection_status_obd_not_connected"
                android:id="@+id/status_obd"
                android:textStyle="bold"
                android:textSize="12sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"
                    android:text="@string/navigation_drawer_connection_status_vehicle_headline"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/navigation_drawer_connection_status_no_vehicle"
                    android:id="@+id/status_vehicle"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:paddingRight="5dp"
                    android:text="@string/navigation_drawer_connection_status_vin_headline"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textIsSelectable="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/navigation_drawer_connection_status_no_vin"
                    android:id="@+id/status_vin"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
