<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_marginTop="@dimen/activity_horizontal_margin"
              android:layout_marginLeft="@dimen/activity_vertical_margin"
              android:layout_marginRight="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/load_data_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/analyze_data_fragment_load_data"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/analyze_data_fragment_no_data_loaded"
            android:id="@+id/loaded_data_textview"/>
    </LinearLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/data_description_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/analyze_data_fragment_show_data_points"
        android:padding="5dp"/>

    <com.androidplot.xy.XYPlot
        android:id="@+id/analyze_data_graph"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="0px"
        android:layout_marginRight="0px"/>

</LinearLayout>